--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,19 @@
  *    for example: General styles, Navigation styles, Hero styles, Footer etc.
  * 
  */
+
+ /*header*/
+
+ * {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+header {
+    background-color: black;
+    width: 100%;
+    padding: 5px;
+}
+
+header p {
+color : whitesmoke;
+}
