--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,34 @@
  * 
  */
 
- /*header*/
+ 
 
  * {
     font-family: 'Courier New', Courier, monospace;
 }
 
+body{
+    padding: 50px 100px 100px 100px;
+    background-color: rgba(240, 238, 238, 0.26);
+}
+
+/*header*/
+
 header {
     background-color: black;
     width: 100%;
     padding: 5px;
+    font-size:larger;
+
+}
+
+header img {
+    border-radius: 10px;
 }
 
 header p {
 color : whitesmoke;
+padding-left: 50px;
 }
 
 header p:last-child {
@@ -29,9 +43,46 @@ header p:last-child {
 }
 
 /*navbar*/
+
  .navbar li {
      color: whitesmoke;
+     text-transform: none;
      display: inline-block;
      width: 100%;
+     padding-left: 20px;
+ }
 
+ li a {
+     display: inline-block;
+     text-decoration: none;
+     color: whitesmoke;
+     padding: 0;
+     font-size: smaller;
+    
+ }
+
+ /*first set of paragraphs*/
+
+ h1 {
+     background-color: silver;
+     text-align: center;
+     color: bisque;
+ }
+
+ h1 ~ p {
+     background-color: whitesmoke;
+ }
+ 
+ h1 ~ p::first-letter {
+     font-size: x-large;
+     font-weight: bold;
+ }
+
+
+
+ /*in aside*/
+
+ .aside li {
+     background-color: silver;
+ }
  }
