--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,21 @@ header p:last-child {
  }
 
 
-
  /*in aside*/
 
  .aside li {
      background-color: silver;
  }
+ 
+ .container img {
+     vertical-align :center;
+     border: 5px solid black;
+     object-fit: cover;
+     width: 300px;
+     height: 300px;
+     text-align: center;
  }
+
+    .container img:first-of-type {
+        border : 5px solid bisque ;
+    }
