added one of my favourite images from Bresson's work

--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,9 @@ header p:last-child {
         font-size: x-large;
         font-weight: bold;
     }
+
+    .new-section img {
+        border: 5px solid bisque;
+        size: 50%;
+       
+    }
