--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,6 @@ header p:last-child {
 
     .new-section img {
         border: 5px solid bisque;
-        size: 50%;
-       
+        background-color: black;
+        
     }
