--- a/css/style.css
+++ b/css/style.css
@@ -133,4 +133,13 @@ header p:last-child {
     color: black;
     
 }
-    
+    /*the last one with images*/
+
+    .photos img {
+        vertical-align :center;
+        border: 5px solid black;
+        object-fit: cover;
+        width: 300px;
+        height: 300px;
+        text-align: center;
+    }
