--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,15 @@ header p:last-child {
         height: 300px;
         text-align: center;
     }
+
+    /*footer*/
+
+    .add * {
+        background-color: black;
+        width: 100%;
+        padding: 5px;
+        font-size:larger;
+        
+        color : white;
+
+    }
