--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,13 @@ header p:last-child {
         background-color: black;
         width: 100%;
         padding: 50px;
-        
         color :bisque;
+    }
 
+    /* badge */
+
+    #badge{
+        width: 300px;
+        border-radius: 10px;
+        color: bisque;
     }
