--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,13 @@ header p:last-child {
 
     #badge{
         width: 300px;
+        height: 150px;
         border-radius: 10px;
-        color: bisque;
+        background-color: bisque;
+        display: inline-block;
+        position: fixed;
+        top : 20px;
+        right : 20px;
+        display: flex;
+
     }
