--- a/css/style.css
+++ b/css/style.css
@@ -156,14 +156,17 @@ header p:last-child {
     /* badge */
 
     #badge{
-        width: 300px;
+        width: 150px;
         height: 150px;
         border-radius: 10px;
         background-color: bisque;
         display: inline-block;
         position: fixed;
-        top : 20px;
+        top : 55px;
         right : 20px;
         display: flex;
+        opacity: 0.5;
+        
+        justify-content: center;
 
     }
