added the time for the transition

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,7 @@ header p:last-child {
         display: flex;
         opacity: 0.5;
         justify-content: center;
+        transition: height 3s;
 
     }
 
